# hpre

./: .travis.yml  LICENSE.md  README.md  hpre.cabal  hpre.hs  package.yaml  stack.yaml  test.hs
.github/workflows/: haskell.yml
tests/: all.hs  all.hs.out  commas.hs  commas.hs.out  ditto.hs  ditto.hs.out  ditto0.hs  ditto1.hs  ditto1.hs.err  ditto2.hs  ditto2.hs.err  ditto3.hs  ditto3.hs.err  ditto4.hs  ditto4.hs.err  guards.hs  guards.hs.out  imports.hs  imports.hs.out  letditto.hs  letditto.hs.out  number.hs  number.hs.out  qualified.hs  qualified.hs.err  qualified.hs.out  syntax.hs  syntax.hs.out  tabbed.hs  tabbed.hs.out  ticked.hs  ticked.hs.err  ticked.hs.out  unicode.hs  unicode.hs.out  unticked.hs  unticked.hs.out
